welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: ';' expected but ',' found.
  faireLigne(Color.red,Color.cyan); faireLigne2(); setPos(1,6); faireLigne(Color.pink, Color.green), setPos(1,6)}
                                                                                                   ^